[tool.poetry]
name = "helptasker-common"
version = "0.0.1"
description = "Shared Library"
authors = ["Kostya Ten <kostya@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "helptasker_common"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.0"}
httpx = {extras = ["http2"], version = "^0.24.1"}
uvicorn = "^0.23.0"
asgi-lifespan = "^2.1.0"
python-json-logger = "^2.0.7"
opentelemetry-exporter-otlp-proto-grpc = "^1.19.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-env = "^0.8.2"
coverage = "^7.2.7"
pytest-httpx = "^0.22.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.18"}
setuptools = "^68.0.0"
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
